[gd_scene load_steps=9 format=3 uid="uid://c2hpkiy8u3k8p"]

[ext_resource type="Texture2D" uid="uid://nb2h8ypvnns5" path="res://Art/Background/Menu.png" id="1_uc1dy"]
[ext_resource type="Theme" uid="uid://bwti3w2ekyd6x" path="res://Theme/Default.tres" id="2_i1bwt"]
[ext_resource type="Script" path="res://Scene/playButton.gd" id="3_4ef4r"]
[ext_resource type="Script" path="res://Scene/offlineLevels.gd" id="4_4jkcx"]
[ext_resource type="Script" path="res://Scene/BackButton.gd" id="4_06hks"]
[ext_resource type="Texture2D" uid="uid://dm71t2k25dl4n" path="res://Art/Background/CheckMArk.png" id="5_6d6lt"]
[ext_resource type="Shader" path="res://Shader/VHSShader.gdshader" id="7_sprig"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5nffg"]
shader = ExtResource("7_sprig")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.094
shader_parameter/scanlines_width = 0.051
shader_parameter/grille_opacity = 0.069
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 2.037
shader_parameter/roll_variation = 0.756
shader_parameter/distort_intensity = 0.004
shader_parameter/noise_opacity = 0.0
shader_parameter/noise_speed = 0.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = -0.00699995
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.08
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="Node2D" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
texture = ExtResource("1_uc1dy")

[node name="Page0" type="Node2D" parent="."]

[node name="Play" type="Button" parent="Page0"]
offset_left = 401.0
offset_top = 135.0
offset_right = 565.0
offset_bottom = 185.0
theme = ExtResource("2_i1bwt")
theme_override_font_sizes/font_size = 25
text = "Play"
script = ExtResource("3_4ef4r")

[node name="Settings" type="Button" parent="Page0"]
offset_left = 402.0
offset_top = 218.0
offset_right = 566.0
offset_bottom = 268.0
theme = ExtResource("2_i1bwt")
theme_override_font_sizes/font_size = 25
text = "Settings"

[node name="Quit" type="Button" parent="Page0"]
offset_left = 403.0
offset_top = 302.0
offset_right = 567.0
offset_bottom = 352.0
theme = ExtResource("2_i1bwt")
theme_override_font_sizes/font_size = 25
text = "Quit"

[node name="Page1" type="Node2D" parent="."]
visible = false

[node name="Online" type="Button" parent="Page1"]
offset_left = 549.0
offset_top = 179.0
offset_right = 713.0
offset_bottom = 229.0
theme = ExtResource("2_i1bwt")
theme_override_font_sizes/font_size = 25
text = "Online"

[node name="Offline" type="Button" parent="Page1"]
offset_left = 255.0
offset_top = 176.0
offset_right = 419.0
offset_bottom = 226.0
theme = ExtResource("2_i1bwt")
theme_override_font_sizes/font_size = 25
text = "Offline"
script = ExtResource("4_4jkcx")

[node name="Levels" type="Node2D" parent="."]
visible = false
position = Vector2(255, 176)

[node name="Level 01" type="Button" parent="Levels"]
offset_left = -62.0
offset_top = 35.0
offset_right = 20.0
offset_bottom = 85.0
theme = ExtResource("2_i1bwt")
theme_override_font_sizes/font_size = 25
text = "01"

[node name="Sprite2D" type="Sprite2D" parent="Levels/Level 01"]
visible = false
position = Vector2(76, 38)
scale = Vector2(0.086, 0.086)
texture = ExtResource("5_6d6lt")

[node name="Level 02" type="Button" parent="Levels"]
offset_left = 190.0
offset_top = 36.0
offset_right = 272.0
offset_bottom = 86.0
theme = ExtResource("2_i1bwt")
theme_override_font_sizes/font_size = 25
text = "02"

[node name="Sprite2D" type="Sprite2D" parent="Levels/Level 02"]
visible = false
position = Vector2(76, 38)
scale = Vector2(0.086, 0.086)
texture = ExtResource("5_6d6lt")

[node name="Level 03" type="Button" parent="Levels"]
offset_left = 447.0
offset_top = 40.0
offset_right = 529.0
offset_bottom = 90.0
theme = ExtResource("2_i1bwt")
theme_override_font_sizes/font_size = 25
text = "03"

[node name="Sprite2D" type="Sprite2D" parent="Levels/Level 03"]
visible = false
position = Vector2(76, 38)
scale = Vector2(0.086, 0.086)
texture = ExtResource("5_6d6lt")

[node name="BackBut" type="Button" parent="."]
visible = false
offset_left = 26.0
offset_top = 17.0
offset_right = 162.0
offset_bottom = 60.0
theme = ExtResource("2_i1bwt")
theme_override_font_sizes/font_size = 25
text = "Back"
script = ExtResource("4_06hks")

[node name="SaveData" type="Node2D" parent="."]
visible = false

[node name="LoadGame" type="Button" parent="SaveData"]
offset_left = 549.0
offset_top = 179.0
offset_right = 713.0
offset_bottom = 229.0
theme = ExtResource("2_i1bwt")
theme_override_font_sizes/font_size = 25
text = "Load Game"

[node name="NewGame" type="Button" parent="SaveData"]
offset_left = 255.0
offset_top = 176.0
offset_right = 419.0
offset_bottom = 226.0
theme = ExtResource("2_i1bwt")
theme_override_font_sizes/font_size = 25
text = "New Game
"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_5nffg")
offset_right = 958.0
offset_bottom = 541.0
mouse_filter = 2

[connection signal="pressed" from="Page0/Play" to="Page0/Play" method="_on_pressed"]
[connection signal="pressed" from="Page1/Online" to="Page0/Play" method="_on_online_pressed"]
[connection signal="pressed" from="Page1/Offline" to="Page0/Play" method="_on_offline_pressed"]
[connection signal="pressed" from="Levels/Level 01" to="Page0/Play" method="_on_level_01_pressed"]
[connection signal="pressed" from="Levels/Level 02" to="Page0/Play" method="_on_level_02_pressed"]
[connection signal="pressed" from="Levels/Level 03" to="Page0/Play" method="_on_level_03_pressed"]
[connection signal="pressed" from="BackBut" to="Page0/Play" method="_on_back_but_pressed"]
[connection signal="pressed" from="SaveData/LoadGame" to="Page0/Play" method="_on_load_game_pressed"]
[connection signal="pressed" from="SaveData/NewGame" to="Page0/Play" method="_on_new_game_pressed"]
